--- a/drill.html
+++ b/drill.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Drill</title>
     <link href="styles/index.css" rel="stylesheet" type="text/css" />
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png"/>
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
 </head>
 
 <body>
-  <nav>
-    <ul class="topnav">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="calendar.html">Information</a></li>
-      <li><a href="drill.html" id="selected">Drill</a></li>
-      <li><a href="drumline.html">Drumline</a></li>
-      <li><a href="guard.html">Guard</a></li>
-    </ul>
-  </nav>
+    <nav>
+        <ul class="topnav">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="calendar.html">Information</a></li>
+            <li><a href="drill.html" id="selected">Drill</a></li>
+            <li><a href="drumline.html">Drumline</a></li>
+            <li><a href="guard.html">Guard</a></li>
+        </ul>
+    </nav>
     <br>
-    <div style='text-align:center'>
-      <iframe id="part1drill" class="drillvid" src="https://www.youtube.com/embed/ZTqo3iOXdmQ" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-      <iframe id="part2drill" class="drillvid" src="https://www.youtube.com/embed/j0Epiavh9uw" allow="autoplay; encrypted-media" allowfullscreen></iframe><br>
-      <iframe id="part3drill" class="drillvid" src="https://www.youtube.com/embed/HWGhjazvBmA" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-      <iframe id="part4drill" class="drillvid" src="https://www.youtube.com/embed/E7TcJD5QII8" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <div style="text-align:center">
+        <iframe id="part1drill" class="drillvid" src="https://www.youtube.com/embed/ZTqo3iOXdmQ" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <iframe id="part2drill" class="drillvid" src="https://www.youtube.com/embed/j0Epiavh9uw" allow="autoplay; encrypted-media" allowfullscreen></iframe><br>
+        <iframe id="part3drill" class="drillvid" src="https://www.youtube.com/embed/HWGhjazvBmA" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <iframe id="part4drill" class="drillvid" src="https://www.youtube.com/embed/E7TcJD5QII8" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div><br>
     <div id="drillselect">
-    <div style='text-align:center'>
-    <div id="selector"><br>
-      <h2>Drill Sheets</h2>
-      <h4>Section</h4>
-      <select id="instrument">
+        <div style="text-align:center">
+            <div id="selector"><br>
+                <h2>Drill Sheets</h2>
+                <h4>Section</h4>
+                <select id="instrument">
         <option>Select your section</option>
         <!-- Woodwinds -->
         <option value="A">Bass Clarinet</option>
@@ -51,13 +52,15 @@
         <option value="Q">Quints</option>
         <option value="Z">Snare</option>
       </select>
-      <input type="text" placeholder="Enter your drill number" id="number" value="">
-      <button type="button" onclick="test()" id="link" name="button">Search</button>
-      <br><br><br><br><br>
-      <iframe id="my_iframe" style="display:none;"></iframe>
-    </div></div>
-  </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="script/index.js"></script>
+                <input type="text" placeholder="Enter your drill number" id="number" value="">
+                <button type="button" onclick="test()" id="link" name="button">Search</button>
+                <br><br><br><br><br>
+                <iframe id="my_iframe" style="display:none;"></iframe>
+            </div>
+        </div>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="script/index.js"></script>
 </body>
+
 </html>
