--- a/calendar.html
+++ b/calendar.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Calendar</title>
     <link href="styles/index.css" rel="stylesheet" type="text/css" />
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png"/>
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
 </head>
 
 <body>
-  <nav>
-    <ul class="topnav">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="calendar.html" id="selected">Information</a></li>
-      <li><a href="drill.html">Drill</a></li>
-      <li><a href="drumline.html">Drumline</a></li>
-      <li><a href="guard.html">Guard</a></li>
-    </ul>
-  </nav>
-  <br><br>
-  <div style='text-align:center'><iframe id="calendar-widget" style="border-width:0" width="788" height="700" title="Calendar" src="https://calendar.google.com/calendar/embed?height=600&wkst=1&amp;bgcolor=%23ffffff&src=npsdnj.org_9j33fgccfi11a9mq82351tq32k%40group.calendar.google.com&amp;color=%232F6309&amp;ctz=America%2FNew_York"></iframe></div><br>
-  <div style='text-align:center'><iframe id="remind-widget" title="Remind Messages" src="https://widgets.remind.com/widget?height=500&join=true&token=f9d9faa031ef013642500242ac110002"></iframe></div><br>
-  <script src="script/index.js"></script>
+    <nav>
+        <ul class="topnav">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="calendar.html" id="selected">Information</a></li>
+            <li><a href="drill.html">Drill</a></li>
+            <li><a href="drumline.html">Drumline</a></li>
+            <li><a href="guard.html">Guard</a></li>
+        </ul>
+    </nav>
+    <br><br>
+    <div style="text-align:center"><iframe id="calendar-widget" style="border-width:0" width="788" height="700" title="Calendar" src="https://calendar.google.com/calendar/embed?height=600&wkst=1&amp;bgcolor=%23ffffff&src=npsdnj.org_9j33fgccfi11a9mq82351tq32k%40group.calendar.google.com&amp;color=%232F6309&amp;ctz=America%2FNew_York"></iframe></div><br>
+    <div style="text-align:center"><iframe id="remind-widget" title="Remind Messages" src="https://widgets.remind.com/widget?height=500&join=true&token=f9d9faa031ef013642500242ac110002"></iframe></div><br>
+    <script src="script/index.js"></script>
 </body>
+
 </html>
