--- a/drumline.html
+++ b/drumline.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Home</title>
     <link href="styles/index.css" rel="stylesheet" type="text/css" />
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png"/>
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
 </head>
 
 <body>
-  <nav>
-    <ul class="topnav">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="calendar.html">Information</a></li>
-      <li><a href="drill.html">Drill</a></li>
-      <li><a href="drumline.html" id="selected">Drumline</a></li>
-      <li><a href="guard.html">Guard</a></li>
-    </ul>
-  </nav><br>
-  <div style='text-align:center'>
-  <img alt='Drumline and Indoor Percussion' src="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/Drum%20Line%20Banner.gif"/><br>
-  <p id="message">The first rehearsal for this year's<br><br>Indoor Drumline will be<br><br>Thursday, November 29th<br><br>6:00 pm to 9:00 pm</p><br>
-  <p>Fill out the interest form <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSfwJ8zoHGurWeM7QBNjRfb--_zRRDLwgujexLEViBQD4I1GPw/viewform">HERE</a></p>
-  <br><br>
-  <p id="warmups">Please download this year's battery warm ups <a target="_blank" href="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/2018%20NP%20Drumline%20Warm%20Up%20Exercises.pdf">HERE</a></p><br>
-  <p id="percstaff"><u>NPHS Percussion Staff</u><br>Joseph Itkor, Caption Head<br>Mike Gould, Front Ensemble Tech<br>Bill "Woody" Woodward, Front Ensemble Tech<br>Joelle Varner, Cymbal Tech<br>Devon Buchanan, Battery Tech</p><br>
-  <p id="percawards"><u style="font-size: 18pt;">Overall Best Percussion Awards:</u><br>2018 USBands Group 6A State Championships<br>2016 USBands Group 6A State Championships<br>2015 USBands Group 6A State Championships<br>2015 USBands Group 6A National Championships<br>2014 USBands Group 6A State Championships<br>2012 USBands Group 6A National Championships<br>2012 USBands Yamaha Cup<br><br>2014  USBands Group 2A Standstill Class Champions</p>
-  <p>USBands Drum Cadence - Click <a target="_blank" href="http://ihsband.org/dan/pirt/cadence.htm">HERE</a><br>
-    Nobody is Watching!</p>
-  </div>
-  <script src="script/index.js"></script>
+    <nav>
+        <ul class="topnav">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="calendar.html">Information</a></li>
+            <li><a href="drill.html">Drill</a></li>
+            <li><a href="drumline.html" id="selected">Drumline</a></li>
+            <li><a href="guard.html">Guard</a></li>
+        </ul>
+    </nav><br>
+    <div style="text-align:center">
+        <img alt="Drumline and Indoor Percussion" src="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/Drum%20Line%20Banner.gif" /><br>
+        <p id="message">The first rehearsal for this year's<br><br>Indoor Drumline will be<br><br>Thursday, November 29th<br><br>6:00 pm to 9:00 pm</p><br>
+        <p>Fill out the interest form <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSfwJ8zoHGurWeM7QBNjRfb--_zRRDLwgujexLEViBQD4I1GPw/viewform">HERE</a></p>
+        <br><br>
+        <p id="warmups">Please download this year's battery warm ups <a target="_blank" href="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/2018%20NP%20Drumline%20Warm%20Up%20Exercises.pdf">HERE</a></p><br>
+        <p id="percstaff"><u>NPHS Percussion Staff</u><br>Joseph Itkor, Caption Head<br>Mike Gould, Front Ensemble Tech<br>Bill "Woody" Woodward, Front Ensemble Tech<br>Joelle Varner, Cymbal Tech<br>Devon Buchanan, Battery Tech</p><br>
+        <p id="percawards"><u style="font-size: 18pt;">Overall Best Percussion Awards:</u><br>2018 USBands Group 6A State Championships<br>2016 USBands Group 6A State Championships<br>2015 USBands Group 6A State Championships<br>2015 USBands Group 6A National Championships<br>2014
+            USBands Group 6A State Championships<br>2012 USBands Group 6A National Championships<br>2012 USBands Yamaha Cup<br><br>2014 USBands Group 2A Standstill Class Champions</p>
+        <p>USBands Drum Cadence - Click <a target="_blank" href="http://ihsband.org/dan/pirt/cadence.htm">HERE</a><br> Nobody is Watching!</p>
+    </div>
+    <script src="script/index.js"></script>
 </body>
+
 </html>
