added bandwagon and competition pages

--- a/drumline.html
+++ b/drumline.html
@@ -17,6 +17,8 @@
             <li><a href="drill.html">Drill</a></li>
             <li><a href="drumline.html" id="selected">Drumline</a></li>
             <li><a href="guard.html">Guard</a></li>
+            <li><a href="bandwagon.html">Bandwagon</a></li>
+            <li><a href="competition.html">Competition 101</a></li>
         </ul>
     </nav><br>
     <div style="text-align:center">
