--- a/scroll.html
+++ b/scroll.html
@@ -17,6 +17,8 @@
             <li><a href="drumline.html">Drumline</a></li>
             <li><a href="guard.html">Guard</a></li>
             <li><a href="scroll.html" id="selected">Scroll</a></li>
+            <li><a href="bandwagon.html">Bandwagon</a></li>
+            <li><a href="competition.html">Competition 101</a></li>
         </ul>
     </nav>
     <link href="styles/index.css" rel="stylesheet" type="text/css" />
