--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <li><a href="drill.html">Drill</a></li>
             <li><a href="drumline.html">Drumline</a></li>
             <li><a href="guard.html">Guard</a></li>
+            <li><a href="bandwagon.html">Bandwagon</a></li>
+            <li><a href="competition.html">Competition 101</a></li>
         </ul>
     </nav>
     <br>
