--- a/bandwagon.html
+++ b/bandwagon.html
@@ -54,33 +54,27 @@
         </div>
     </div>
     <div id="volunteer">
-        <div style="text-align: center;"><span style="font-size: 12pt; font-family: 'Trebuchet MS';"><strong><span
-                                    style="font-size: 14pt;"><span style="font-size: 18pt;">Bandwagon Parent Volunteer Page -
-                                        WE NEED YOU!</span></span>
+        <div align="center"><span><strong><span><span style="font-size: 18pt;">Bandwagon Parent Volunteers - WE NEED YOU!</span></span>
             </strong>
             </span>
         </div>
-        <div style="font-size: 12pt; font-family: 'Trebuchet MS';">
-            <hr>
-        </div>
-        <div style="font-size: 12pt; font-family: 'Trebuchet MS';" align="center">&nbsp;</div>
-        <div style="text-align: center;"><strong style="font-size: 12pt;"><span style="font-family: 'Trebuchet MS';">To
-                                Sign Up, Click <span style="color: dodgerblue;"><a style="color: dodgerblue;" href="http://signup.com/go/fevoVf"
+        <hr>
+        <div style="text-align: center;"><strong style="font-size: 12pt;"><span>To Sign Up, Click <span style="color: dodgerblue;"><a style="color: dodgerblue;" href="http://signup.com/go/fevoVf"
                                         target="_blank" rel="noopener noreferrer" aria-label="HERE - Opens a new window">HERE</a></span></span></strong></div>
         <div style="text-align: justify;">
-            <p style="text-align: center; font-size: 12pt; font-family: 'Trebuchet MS';"><strong style="font-size: 12pt; font-family: 'Trebuchet MS';">Bandwagon
-                                Volunteer </strong><strong style="font-size: 12pt; font-family: 'Trebuchet MS';">Links </strong><strong style="font-size: 12pt; font-family: 'Trebuchet MS';">(click on the blue text to access the
+            <p style="text-align: center; font-size: 12pt;"><strong style="font-size: 12pt;">Bandwagon
+                                Volunteer </strong><strong style="font-size: 12pt;">Links </strong><strong style="font-size: 12pt; font-family: 'Trebuchet MS';">(click on the blue text to access the
                                 link)</strong></p>
-            <p style="text-align: center; font-size: 12pt; font-family: 'Trebuchet MS';"><strong style="font-size: 12pt;">BAND
+            <p style="text-align: center; font-size: 12pt;"><strong style="font-size: 12pt;">BAND
                                 FAMILIES: PLEASE VOLUNTEER FOR </strong><strong style="font-size: 12pt; color: red;"><u>AT
                                     LEAST</u></strong><strong style="font-size: 12pt; color: red;"> <span style="font-size: 18pt;">5</span></strong><strong style="font-size: 12pt;"> EVENTS OR ACTIVITIES.</strong></p>
-            <p style="text-align: center;"><span style="font-size: 12pt; line-height: 23.1111106872559px; font-family: 'Trebuchet MS';"><strong>For
+            <p style="text-align: center;"><span style="font-size: 12pt; line-height: 23.1111106872559px;"><strong>For
                                     a description of committees and what they do, Click <span style="color: dodgerblue;"><a
                                             style="color: dodgerblue;" href="https://docs.google.com/document/d/1qVR8beMiUoxIE1f-8cxjkfSVnmB-4BR1cx1wSiLDaGo/edit?usp=sharing"
                                             target="_blank" rel="noopener noreferrer" aria-label="HERE - Opens a new window">HERE</a></span></strong>
                 </span>
             </p>
-            <p style="text-align: center;"><span style="font-size: 12pt; line-height: 23.1111px; font-family: 'Trebuchet MS'; color: black;"><strong>For
+            <p style="text-align: center;"><span style="font-size: 12pt; line-height: 23.1111px; color: black;"><strong>For
                                     a video tutorial on how to sign up, look below!</strong></span></p>
         </div>
         <p style="text-align: center;"><iframe src="https://www.youtube.com/embed/ZSwvHaJ4kkQ" width="560" height="315" frameborder="0" allowfullscreen=""></iframe></p>
