--- a/competition.html
+++ b/competition.html
@@ -9,7 +9,14 @@
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
     <style>
         body {
-            color: #993300;
+            font-size: 20px;
+        }
+        
+        #title {
+            font-variant: small-caps;
+            color: #006400;
+            font-weight: bold;
+            font-size: 30pt;
         }
     </style>
 </head>
@@ -26,6 +33,15 @@
             <li><a href="competition.html" id="selected">Competition 101</a></li>
         </ul>
     </nav><br><br>
+    <div style="text-align:center">
+        <span id="title">Competition 101</span><br><br>
+        <span>Take the crash course in becoming a band fan <a target="_blank" href="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/fanbook%202014.pdf">HERE</a><br><br></span>
+        </span><span>USBands Rule Book 2018 - <a target="_blank" href="https://yea.org/files/USBands/Fall/2018_USBands_Fall%20Participation%20Guide.pdf">HERE</a><br><br><br></span>
+        <span align="left">Adjudicator's Sheets - <a>HERE</a></span><br>
+        <span style="width: 85%;">Please read the criteria by which we are evaluated in competition in the United States Scholastic Band Association. In 2018 new judges sheets were revised for A Class Bands. Each sheet has a front
+        side and a back side which shows the rubric for scoring in levels of achievement, boxes 1 - 5. The scores for each of these boxes of achievement slide upward throughout the season every other week to ensure an elevation of score throughout the
+        season.</span>
+    </div>
 </body>
 
 </html>
