--- a/competition.html
+++ b/competition.html
@@ -18,6 +18,13 @@
             font-weight: bold;
             font-size: 30pt;
         }
+        
+        #criteria {
+            padding-left: 9%;
+            padding-right: 9%;
+            text-align: center;
+            align-content: center;
+        }
     </style>
 </head>
 
@@ -33,15 +40,15 @@
             <li><a href="competition.html" id="selected">Competition 101</a></li>
         </ul>
     </nav><br><br>
-    <div style="text-align:center">
-        <span id="title">Competition 101</span><br><br>
-        <span>Take the crash course in becoming a band fan <a target="_blank" href="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/fanbook%202014.pdf">HERE</a><br><br></span>
-        </span><span>USBands Rule Book 2018 - <a target="_blank" href="https://yea.org/files/USBands/Fall/2018_USBands_Fall%20Participation%20Guide.pdf">HERE</a><br><br><br></span>
-        <span align="left">Adjudicator's Sheets - <a>HERE</a></span><br>
-        <span style="width: 85%;">Please read the criteria by which we are evaluated in competition in the United States Scholastic Band Association. In 2018 new judges sheets were revised for A Class Bands. Each sheet has a front
-        side and a back side which shows the rubric for scoring in levels of achievement, boxes 1 - 5. The scores for each of these boxes of achievement slide upward throughout the season every other week to ensure an elevation of score throughout the
-        season.</span>
+    <div style="text-align: center;">
+        <div id="title">Competition 101<br><br></div>
+        <p>Take the crash course in becoming a band fan <a target="_blank" href="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/fanbook%202014.pdf">HERE</a><br><br> USBands Rule Book 2018 - <a target="_blank" href="https://yea.org/files/USBands/Fall/2018_USBands_Fall%20Participation%20Guide.pdf">HERE</a><br><br><br>
+            <a href="http://www.yea.org/site/PageServer?pagename=USSBA" target="_blank"><img style="width: 224px; height: auto; max-width: 100%; max-height: 86px;" title="USBands" src="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/USBands.JPG" alt="USBands" width="224" height="86"></a><br>
+            <div>Adjudicator's Sheets - <a>HERE</a><br></div>
+        </p>
     </div>
+    <div id="criteria">Please read the criteria by which we are evaluated in competition in the United States Scholastic Band Association. In 2018 new judges sheets were revised for A Class Bands. Each sheet has a front side and a back side which shows the rubric for scoring
+        in levels of achievement, boxes 1 - 5. The scores for each of these boxes of achievement slide upward throughout the season every other week to ensure an elevation of score throughout the season.</div>
 </body>
 
 </html>
