--- a/drumline.html
+++ b/drumline.html
@@ -29,8 +29,11 @@
         <p id="warmups">Please download this year's battery warm ups <a target="_blank" href="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/2018%20NP%20Drumline%20Warm%20Up%20Exercises.pdf">HERE</a></p><br>
         <p id="percstaff"><u>NPHS Percussion Staff</u><br>Joseph Itkor, Caption Head<br>Mike Gould, Front Ensemble Tech<br>Bill "Woody" Woodward, Front Ensemble Tech<br>Joelle Varner, Cymbal Tech<br>Devon Buchanan, Battery Tech</p><br>
         <p id="percawards"><u style="font-size: 18pt;">Overall Best Percussion Awards:</u><br>2018 USBands Group 6A State Championships<br>2016 USBands Group 6A State Championships<br>2015 USBands Group 6A State Championships<br>2015 USBands Group 6A National Championships<br>2014
-            USBands Group 6A State Championships<br>2012 USBands Group 6A National Championships<br>2012 USBands Yamaha Cup<br><br>2014 USBands Group 2A Standstill Class Champions</p>
-        <p>USBands Drum Cadence - Click <a target="_blank" href="http://ihsband.org/dan/pirt/cadence.htm">HERE</a><br> Nobody is Watching!</p>
+            USBands Group 6A State Championships<br>2012 USBands Group 6A National Championships<br>2012 USBands Yamaha Cup<br><br>2014 USBands Group 2A Standstill Class Champions</p><br><br>
+        <div style="font-size: 20px;">
+            <p>USBands Drum Cadence - Click <a target="_blank" href="http://ihsband.org/dan/pirt/cadence.htm">HERE</a><br> Nobody is Watching!</p><br>Any questions?<br>Please contact Mr. Itkor<br><br> Joseph Itkor<br> Percussion Caption Head<br> 908-347-7898<br>
+            <a href="mailto:jitkor32@comcast.net">jitkor32@comcast.net</a>
+        </div><br><br><br>
     </div>
     <script src="script/index.js"></script>
 </body>
