added drum photo

--- a/drumline.html
+++ b/drumline.html
@@ -20,7 +20,7 @@
             <li><a href="bandwagon.html">Bandwagon</a></li>
             <li><a href="competition.html">Competition 101</a></li>
         </ul>
-    </nav><br>
+    </nav><br><br>
     <div style="text-align:center">
         <img alt="Drumline and Indoor Percussion" src="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/Drum%20Line%20Banner.gif" /><br>
         <p id="message">The first rehearsal for this year's<br><br>Indoor Drumline will be<br><br>Thursday, November 29th<br><br>6:00 pm to 9:00 pm</p><br>
@@ -33,7 +33,8 @@
         <div style="font-size: 20px;">
             <p>USBands Drum Cadence - Click <a target="_blank" href="http://ihsband.org/dan/pirt/cadence.htm">HERE</a><br> Nobody is Watching!</p><br>Any questions?<br>Please contact Mr. Itkor<br><br> Joseph Itkor<br> Percussion Caption Head<br> 908-347-7898<br>
             <a href="mailto:jitkor32@comcast.net">jitkor32@comcast.net</a>
-        </div><br><br><br>
+        </div><br>
+        <img title="pearlbds" src="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/Pearl_BD.jpg" alt="pearlbds" width="150" height="76" align="middle" border="0" style="width: 150px; max-width: 100%; height: auto; max-height: 76px;"><br><br><br><br>
     </div>
     <script src="script/index.js"></script>
 </body>
