--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
         <div class="head">
             <h1>Welcome to the official unofficial New Providence Marching Band Website!</h1>
         </div>
-        <div id="maincontent"><br> Marching Band Awards are TONIGHT!<br> Thursday, December 6th<br> Staff and Students for Dinner at 5:45pm in the Cafeteria<br> Family and Friends are encouraged to attend the awards portion of the evening<br> by 7:30pm in the Auditorium<br><br>            Championship Jacket Order Form - <a target="_blank" href="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/Championship%20Jacket%20Order%20Form%202018.pdf">HERE</a><br> Non-Member Championship Long-Sleeve Tee Order Form
-            - <a target="_blank" href="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/Non%20Member%20Championship%20Tee%20Order%20Form%202018.pdf">HERE</a><br> (these would be for anyone not in the marching band)<br><br><br>
-            <!-- 2018 band photo w/ border -->
+        <div id="maincontent"><b><br> Recordings of Parade Music:<br>
+          PPS 1 - <a href="https://drive.google.com/file/d/0B1Wx0I5nKk5SZFl5STN1eUtZVWM/view?usp=sharing" target="_blank">HERE</a><br>
+          PPS 2 - <a href="https://drive.google.com/file/d/0B1Wx0I5nKk5SRlFSTVZkalptclE/view?usp=sharing" target="_blank">HERE</a><br>
+          PPS 3 - <a href="https://drive.google.com/file/d/0B1Wx0I5nKk5SVFM2OFl3cEEyV1E/view?usp=sharing" target="_blank">HERE</a><br>
+          Parade Music Download - <a href="https://drive.google.com/drive/folders/1Z2_5xflqwlpLoRzrgClHw3AZJZzRf5LG?usp=sharing" target="_blank">HERE</a><br><br><br></b>
             USBands Association NJ State Champions:<br> 2002, 2003, 2004, 2006, 2008, 2009,<br> 2011, 2012, 2015, 2016 and 2018<br> Regional Champions: 1994, 2002, 2008, 2010<br> National Champions: 2011, 2012, 2015, 2016 and 2018<br>
         </div>
     </div>
