finished main page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link href="styles/index.css" rel="stylesheet" type="text/css" />
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
+    <style>
+      img {
+        border: 5px solid black;
+      }
+    </style>
 </head>
 
 <body>
@@ -32,9 +37,20 @@
           PPS 2 - <a href="https://drive.google.com/file/d/0B1Wx0I5nKk5SRlFSTVZkalptclE/view?usp=sharing" target="_blank">HERE</a><br>
           PPS 3 - <a href="https://drive.google.com/file/d/0B1Wx0I5nKk5SVFM2OFl3cEEyV1E/view?usp=sharing" target="_blank">HERE</a><br>
           Parade Music Download - <a href="https://drive.google.com/drive/folders/1Z2_5xflqwlpLoRzrgClHw3AZJZzRf5LG?usp=sharing" target="_blank">HERE</a><br><br><br></b>
-            USBands Association NJ State Champions:<br> 2002, 2003, 2004, 2006, 2008, 2009,<br> 2011, 2012, 2015, 2016 and 2018<br> Regional Champions: 1994, 2002, 2008, 2010<br> National Champions: 2011, 2012, 2015, 2016 and 2018<br>
-        </div>
+          <img style="width: 359px; max-width: 100%; height: auto; max-height: 164px;" title="NPMB2018" src="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/NPMB2018.png" alt="NPMB2018 " width="359" height="164"><br><br><br><br>
+            USBands Association NJ State Champions:<br> 2002, 2003, 2004, 2006, 2008, 2009,<br> 2011, 2012, 2015, 2016 and 2018<br> Regional Champions: 1994, 2002, 2008, 2010<br> National Champions: 2011, 2012, 2015, 2016 and 2018<br><br><br>
+            <br><img style="border: 5px solid; width: 300px; max-width: 100%; height: auto; max-height: 256px;" title="NPMB Nats 2018" src="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/National%20Champs%202018.JPG" alt="NPMB Nats 2018 " width="300"height="256"><br>
+            USBands Group VI A National Champions 2018<br><br><br><br>
+            <img style="border: 5px solid; width: 300px; max-width: 100%; height: auto; max-height: 189px;" title="NPMB State Championships 2018" src="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/State%20Champs%202018.jpg" alt="NPMB State Championships 2018 " width="300" height="189"><br>
+            USBands Group VI A NJ State Champions 2018<br><br><br><br>
+            <b>Warm-Up Manual 2018 - <a href="https://drive.google.com/drive/folders/1GX5an2z970qsXIN4070oKPEv96YPI8wN?usp=sharing" target="_blank">HERE</a></b>
+        </div><br><br>
     </div>
+    <div id="programphilosophy">
+      <b>Program Philosophy</b><br><br>
+      The Pride & Class of New Providence, The New Providence High School Marching Band is a COMPLETE team activity where EVERYONE, their TIME and EFFORT are IMPORTANT.  Although we participate as a competitive entity, the stress is not on a placement or score, but a complete dedication to excellence, character and improvement.<br><br>
+      ABOVE ALL we work to make sure that our actions represent that of great people as we strive to be not only proficient performers but quality ambassadors of our school, community, families and of ourselves.
+    </div><br><br><br>
     <script src="script/index.js"></script>
 </body>
 
