--- a/drill.html
+++ b/drill.html
@@ -31,7 +31,7 @@
         <div style="text-align:center">
             <div id="selector"><br>
                 <h2>Drill Sheets</h2>
-                <h4>Section</h4>
+                <h4 style="font-size:18px;">Enter Your Section to Receive Your Sections Drill</h4>
                 <select id="instrument">
         <option>Select your section</option>
         <!-- Woodwinds -->
@@ -54,7 +54,7 @@
         <option value="Q">Quints</option>
         <option value="Z">Snare</option>
       </select>
-                <input type="text" placeholder="Enter your drill number" id="number" value="">
+                <!-- <input type="text" placeholder="Enter your drill number" id="number" value=""> -->
                 <button type="button" onclick="test()" id="link" name="button">Search</button>
                 <br><br><br><br><br>
                 <iframe id="my_iframe" style="display:none;"></iframe>
