--- a/calendar.html
+++ b/calendar.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Calendar</title>
+    <title>Information</title>
     <link href="styles/index.css" rel="stylesheet" type="text/css" />
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
